--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,9 @@
           <a class="nav-link" href="/create">Create</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#"> <b class="text-danger">МОЙ КОТЁНОЧЕК , Я ТЕБЯ ОЧЕНЬ СИЛЬНО ЛЮБЛЮ =* LOVE YOU MY HONEY</b> </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/update">Update</a>
         </li>
       </li>
