(feature)final version

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<p class="text-center text-muted bg-light">© Copyright 20222 The Awesome People</p>
+<h4 class="text-center text-muted text-success fixed">Created by burda.jeka</h4>
