--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,22 @@
-body,html{
+body,
+html {
   height: 100%;
   width: 100%;
 }
-.btn { 
+.btn {
   margin-top: 2%;
 }
-img{
+img {
   width: 60%;
   margin-left: 30%;
   margin-top: -5%;
 }
+footer {
+  width: 100%;
+}
 
-
-
+@media screen and (max-width: 768px) {
+  .img-fluid {
+    display: none;
+  }
+}
