--- a/views/pages/create.ejs
+++ b/views/pages/create.ejs
@@ -8,8 +8,8 @@
 <header>
     <%- include('../partials/header'); %>
 </header>
-<main>
-  <form class="container" action="/create" method="post">
+<main class="container">
+  <form action="/create" method="post">
     <div class="row">
       <h1 class="text-success mx-3"><%- message -%></h1>
       <div class="row">
@@ -28,13 +28,13 @@
             </select>
             <div>
               <div class="form-check mt-3">
-                <input class="form-check-input" type="radio" name="gender" id="flexRadioDefault1" value="Male">
+                <input class="form-check-input" type="radio" name="gender" id="flexRadioDefault1" value="Male"checked>
                 <label class="form-check-label" for="gender">
                   Male
                 </label>
               </div>
               <div class="form-check mt-2">
-                <input class="form-check-input" type="radio" name="gender" id="flexRadioDefault2" value="Female" checked>
+                <input class="form-check-input" type="radio" name="gender" id="flexRadioDefault2" value="Female" >
                 <label class="form-check-label" for="gender">
                   Female
                 </label>
@@ -49,8 +49,8 @@
       </div>
     </div>
   </div>
-</div>
 </main>
+</div>
 <footer class="pt-4 ">
     <%- include('../partials/footer'); %>
 </footer>
