--- a/views/pages/delete.ejs
+++ b/views/pages/delete.ejs
@@ -1,22 +1,37 @@
-<head>
-<%- include('../partials//head.ejs') %> <!-- Head -->
-</head>
-<body>
-	<header>
-		<%- include('../partials/header.ejs')%> <!-- Header -->
-	</header>
-	<div class="container">
-		<h1 class="text-success mx-3"><%= message %></h1>
-		<div class="input-group mt-5 mx-3 ">
-			<form action="/delete/:id" method="POST">
-				<input type="text" name="id" class="form-control" placeholder="id" aria-label="name-soldier">
-				<button class="btn btn-outline-success mt-3" type="submit">DELETE</button>
-			</form>
-		</div>
-	</div>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>	
-</body>
-<footer>
-		<%- include('../partials//footer')%> <!-- Footer -->
-</footer>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <%- include('../partials/head'); %>
+  </head>
+  <body>
+    <header><%- include('../partials/header'); %></header>
+    <main class="d-flex flex-column min-vh-100">
+      <div class="container">
+        <row>
+          <h1 class="text-success mx-3"><%= message %></h1>
+          <div class="input-group">
+            <form action="/delete/:id" method="POST">
+              <input
+                type="text"
+                name="id"
+                class="form-control mt-5 mx-4"
+                placeholder="id"
+                aria-label="name-soldier"
+              />
+              <button class="btn btn-outline-success mt-3 mx-4" type="submit">
+                DELETE
+              </button>
+            </form>
+          </div>
+        </row>
+      </div>
+    </main>
+    <div class="wrapper flex-grow-1"></div>
+    <footer class="mt-auto"><%- include('../partials/footer'); %></footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
