--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,7 @@
 <head>
     <%- include('../partials/head'); %>
 </head>
+<div class="wrapper">
 <body>
 <header>
     <%- include('../partials/header'); %>
@@ -11,7 +12,7 @@
 <main>
   <div class="container">
 		<h1><%= message %></h1>
-		<h2>Soldiers</h2>
+		<h2 class="text-success">Soldiers</h2>
 		<% if(soldiers.length) {%>
 		<table class="table table-dark table-striped">
 			<thead>
@@ -45,5 +46,6 @@
     <%- include('../partials/footer'); %>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
