--- a/views/pages/update.ejs
+++ b/views/pages/update.ejs
@@ -28,13 +28,13 @@
             </select>
             <div>
             <div class="form-check mt-3">
-              <input class="form-check-input" type="radio" name="gender" id="flexRadioDefault1" value="Male">
+              <input class="form-check-input" type="radio" name="gender" id="flexRadioDefault1" value="Male" checked>
               <label class="form-check-label" for="flexRadioDefault1">
                 Male
               </label>
             </div>
             <div class="form-check mt-2">
-              <input class="form-check-input" type="radio" name="gender" id="flexRadioDefault2" value="Female" checked>
+              <input class="form-check-input" type="radio" name="gender" id="flexRadioDefault2" value="Female" >
               <label class="form-check-label" for="gender">
                 Female
               </label>
