--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,9 @@
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>Personnel constructor</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="style.css" />
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+/>
