--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Personnel manager</a>
+    <a class="navbar-brand text-bold" href="#">Personnel manager</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,13 +8,9 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/main">Home</a>
-          
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/create">Create</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"> <b class="text-danger">МОЙ КОТЁНОЧЕК , Я ТЕБЯ ОЧЕНЬ СИЛЬНО ЛЮБЛЮ =* LOVE YOU MY HONEY</b> </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/update">Update</a>
@@ -23,7 +19,12 @@
       <li class="nav-item">
         <a class="nav-link" href="/delete">Delete</a>
       </li>
-      </ul>
+    </ul>
+    <div class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link d-lg-flex justify-content-end mx-lg-5 text-success" href="/api/getSoldiers">API</a>
+      </li>
+    </div>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
